[gd_scene load_steps=2 format=3 uid="uid://bx0tgkpa6qi82"]

[ext_resource type="Script" uid="uid://ds2m7iy127ies" path="res://scripts/screen_overlay.gd" id="1_js8em"]

[node name="ScreenOverlay(Restart)" type="CanvasLayer"]
script = ExtResource("1_js8em")

[node name="GameOverOverlay" type="ColorRect" parent="."]
offset_left = -300.0
offset_top = -185.0
offset_right = 700.0
offset_bottom = 315.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 120.0
offset_top = 36.0
offset_right = 210.0
offset_bottom = 129.0

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Game Over"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
